--- a/assets/styles.css
+++ b/assets/styles.css
@@ -4,12 +4,8 @@ body
     font-size: medium;
 }
 
-.game
+.music
 {
-    margin: auto;
-    margin-top:1px ;
-    width: 50%;
-    /*border: 3px solid green;*/
-    padding: 10px;
-    background-color: rgba(0, 0, 0, 0.253);
+    margin-bottom: 10px;
+    bottom: 0;
 }
