--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,3 +9,12 @@ body
     margin-bottom: 10px;
     bottom: 0;
 }
+
+canvas
+{
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+}
